2014-11-06  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.md (trap): New insn.  Add "trap" to attribute type.
	Don't allow trap insn in in_branch_delay, in_nullified_branch_delay
	or in_call_delay.
	
2014-11-06  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64-elf-raw.h (CA53_ERR_835769_SPEC): Define.
	(LINK_SPEC): Include CA53_ERR_835769_SPEC.
	* config/aarch64/aarch64-linux.h
	(CA53_ERR_835769_SPEC): Define.
	(LINK_SPEC): Include CA53_ERR_835769_SPEC.

2014-10-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.c (aarch64_madd_needs_nop): Restore
	recog state after aarch64_prev_real_insn call.

2014-10-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config.gcc (aarch64*-*-*): Define TARGET_FIX_ERR_A53_835769_DEFAULT
	if asked.
	* configure.ac: Add --enable-fix-cortex-a53-835769 option.
	* configure: Regenerate.
	* config/aarch64/aarch64.c (aarch64_override_options): Handle
	TARGET_FIX_ERR_A53_835769_DEFAULT.
	* config/aarch64/aarch64.opt (mfix-cortex-a53-835769): Set Init value
	to 2.
	* doc/install.texi: Document --enable-fix-cortex-a53-835769 option.

2014-10-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.opt (mfix-cortex-a53-835769): New option.
	* config/aarch64/aarch64.h (ADJUST_INSN_LENGTH): Define.
	(FINAL_PRESCAN_INSN): Likewise.
	* config/aarch64/aarch64.h (is_mem_p): New function.
	(has_memory_op): Likewise.
	(aarch64_prev_real_insn): Likewise.
	(is_madd_op): Likewise.
	(dep_between_memop_and_curr): Likewise.
	(aarch64_madd_needs_nop): Likewise.
	(aarch64_final_prescan_insn): Likewise.
	* doc/invoke.texi (Document new option).

2014-10-15  Eric Botcazou  <ebotcazou@adacore.com>

	* stor-layout.c (self_referential_size): Do not promote arguments.

2014-10-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport from mainline r215880
	2014-10-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin):